Add links to footer
Signed-off-by: Angus Gray-Weale <gusgw@gusgw.net>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,10 @@
   <footer class="Footer">
     <div class="u-wrapper">
       <div class="u-padding">
-        {{ safeHTML . }}
+        {{ safeHTML . }}     
+        <a href="https://www.gusgw.net/index.xml">RSS</a>
+        <a href="https://twitter.com/angusgrayweale">X</a>
+        <a href="https://fosstodon.org/@gusgw">Fosstodon</a>        
       </div>
     </div>
   </footer>
